--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.3"
   }
 }
