--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "scripts": {
-    "install-all": "cd frontend && npm install && cd ../backend && npm install",
-    "build": "cd frontend && npm run build",
+    "scripts": {
+    "install-all": "npm install", 
+    "build": "cd frontend && npm install && npm run build && cd ../backend && npm install",
     "start": "cd backend && node server.js"
-  }
+    }
 }
