--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://securemessagingweb-production.up.railway.app/
+REACT_APP_API_URL=https://securemessagingweb-production.up.railway.app/
