--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "install-all": "cd frontend && npm install && cd ../backend && npm install",
-    "build": "cd frontend && npm run build && cp -r frontend/build backend/",
+    "build": "cd frontend && npm run build && cd .. && cp -r frontend/build backend/",
     "start": "cd backend && node server.js"
   }
 }
